# szechenyi-app

./: Cargo.toml  index.html  styles.css
src/: app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
