[package]
name = "szechenyi-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
web-sys = "0.3.70"
js-sys = "0.3.70"
serde-wasm-bindgen = "0.6.5"
console_error_panic_hook = "0.1.7"
log = "0.4.22"
reqwest = {version = "0.12.7"}
anyhow = "1.0.89"
indexmap = "2.5.0"
scraper = "0.20.0"

[workspace]
members = ["src-tauri"]
